packages/typ/tests/fixtures/diagnostics/0784_polyvar_closed_row_extra_pattern_03.ml.infer.expected
File "0784_polyvar_closed_row_extra_pattern_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0784_polyvar_closed_row_extra_pattern_03 is not a valid module name.

File "0784_polyvar_closed_row_extra_pattern_03.ml", line 3, characters 4-6:
3 |   | `B -> 2
        ^^
Error: This pattern matches values of type [? `B ]
       but a pattern was expected which matches values of type [ `A of int ]
       The second variant type does not allow tag(s) `B
